force-app/main/default/objects/Conveyance__c/fields/Listing_Building_Dubizzle__c.field-meta.xml
<CustomField>
    <fullName>Listing_Building_Dubizzle__c</fullName>
    <formula>Listing_L__r.pba_uaefields__Building_Dubizzle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Building - Dubizzle</label>
    <type>Text</type>
</CustomField>