force-app/main/default/objects/Conveyance__c/fields/Listing_City_Dubizzle__c.field-meta.xml
<CustomField>
    <fullName>Listing_City_Dubizzle__c</fullName>
    <formula>TEXT( Listing_L__r.pba_uaefields__City_Dubizzle__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing City - Dubizzle</label>
    <type>Text</type>
</CustomField>