force-app/main/default/objects/Conveyance__c/fields/Listing_Dubizzle_Region__c.field-meta.xml
<CustomField>
    <fullName>Listing_Dubizzle_Region__c</fullName>
    <formula>Listing_L__r.pba_uaefields__Dubizzle_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Dubizzle Region</label>
    <type>Text</type>
</CustomField>