force-app/main/default/objects/Conveyance__c/fields/Listing_L__c.field-meta.xml
<CustomField>
    <fullName>Listing_L__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>pba__Listing__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>