force-app/main/default/objects/Conveyance__c/fields/Listing_Property_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>Listing_Property_Propertyfinder__c</fullName>
    <formula>Listing_L__r.pba_uaefields__Property_Propertyfinder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Property - Propertyfinder</label>
    <type>Text</type>
</CustomField>