force-app/main/default/objects/Conveyance__c/fields/Listing_Property_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Listing_Property_Sub_Type__c</fullName>
    <formula>TEXT(  Listing_L__r.pba_uaefields__Property_Sub_Type__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Property Sub Type</label>
    <type>Text</type>
</CustomField>