force-app/main/default/objects/Conveyance__c/fields/Listing_State__c.field-meta.xml
<CustomField>
    <fullName>Listing_State__c</fullName>
    <formula>Listing_L__r.pba__State_pb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing State</label>
    <type>Text</type>
</CustomField>