force-app/main/default/objects/Conveyance__c/fields/Listing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Listing_Zip_Postal_Code__c</fullName>
    <formula>Listing_L__r.pba__PostalCode_pb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Zip/Postal Code</label>
    <type>Text</type>
</CustomField>