force-app/main/default/objects/Conveyance__c/fields/Memorandum_of_Sale_Receive__c.field-meta.xml
<CustomField>
    <fullName>Memorandum_of_Sale_Receive__c</fullName>
    <inlineHelpText>If you tick &apos;Memorandum of Sale Received&apos; and keep this blank then It will automatically Update.</inlineHelpText>
    <label>Memorandum of Sale Received</label>
    <type>DateTime</type>
</CustomField>