force-app/main/default/objects/Conveyance__c/fields/Memorandum_of_Sale_Received__c.field-meta.xml
<CustomField>
    <fullName>Memorandum_of_Sale_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Memorandum of Sale Received</label>
    <type>Checkbox</type>
</CustomField>