force-app/main/default/objects/Conveyance__c/fields/Mortgage_Broker__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Conveyance1</relationshipName>
    <type>Lookup</type>
</CustomField>