force-app/main/default/objects/Conveyance__c/fields/Mortgage_Lender__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage Lender</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Conveyance2</relationshipName>
    <type>Lookup</type>
</CustomField>