force-app/main/default/objects/Conveyance__c/fields/Mortgage_Offer_Received1__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Offer_Received1__c</fullName>
    <inlineHelpText>If you tick &apos;Mortgage Offer Received&apos; and keep this blank then It will automatically update</inlineHelpText>
    <label>Mortgage Offer Received</label>
    <type>DateTime</type>
</CustomField>