force-app/main/default/objects/Conveyance__c/fields/Mortgage_Offer_Received__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Offer_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgage Offer Received</label>
    <type>Checkbox</type>
</CustomField>