force-app/main/default/objects/Conveyance__c/fields/Mortgage_Required__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Required__c</fullName>
    <label>Mortgage Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>