force-app/main/default/objects/Conveyance__c/fields/Mortgage_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Valuation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgage Valuation</label>
    <type>Checkbox</type>
</CustomField>