force-app/main/default/objects/Conveyance__c/fields/OC_Deposit__c.field-meta.xml
<CustomField>
    <fullName>OC_Deposit__c</fullName>
    <label>OC Deposit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_10_deposit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>personal cheque</fullName>
            </value>
            <value>
                <fullName>manager’s cheque</fullName>
            </value>
            <value>
                <fullName>escrow is seller</fullName>
            </value>
            <value>
                <fullName>escrow is 3rd party</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Buyer&apos;s Agent</fullName>
                <isActive>false</isActive>
                <label>Buyer&apos;s Agent</label>
            </value>
            <value>
                <fullName>OC</fullName>
                <isActive>false</isActive>
                <label>OC</label>
            </value>
            <value>
                <fullName>Seller</fullName>
                <isActive>false</isActive>
                <label>Seller</label>
            </value>
            <value>
                <fullName>Seller&apos;s Agent</fullName>
                <isActive>false</isActive>
                <label>Seller&apos;s Agent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>