force-app/main/default/objects/Conveyance__c/fields/Offer_Received__c.field-meta.xml
<CustomField>
    <fullName>Offer_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Received</label>
    <type>Checkbox</type>
</CustomField>