force-app/main/default/objects/Conveyance__c/fields/ORN__c.field-meta.xml
<CustomField>
    <fullName>ORN__c</fullName>
    <label>ORN?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>