force-app/main/default/objects/Conveyance__c/fields/Other_OC_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_OC_Notes__c</fullName>
    <label>Other OC Notes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>