force-app/main/default/objects/Conveyance__c/fields/Percentage_of_purchase_price_required__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_purchase_price_required__c</fullName>
    <label>Percentage of purchase price required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>