force-app/main/default/objects/Conveyance__c/fields/POA_Required__c.field-meta.xml
<CustomField>
    <fullName>POA_Required__c</fullName>
    <label>POA Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Remote Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>