force-app/main/default/objects/Conveyance__c/fields/Property_Mortgaged__c.field-meta.xml
<CustomField>
    <fullName>Property_Mortgaged__c</fullName>
    <label>Property Mortgaged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
                <isActive>false</isActive>
                <label>Buyer</label>
            </value>
            <value>
                <fullName>Buyer+Seller</fullName>
                <isActive>false</isActive>
                <label>Buyer+Seller</label>
            </value>
            <value>
                <fullName>Seller</fullName>
                <isActive>false</isActive>
                <label>Seller</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>