force-app/main/default/objects/Conveyance__c/fields/Property_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Property_Valuation__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Listing_L__r.Property_Valuation__r.Id , Listing_L__r.Property_Valuation__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Valuation</label>
    <type>Text</type>
</CustomField>