force-app/main/default/objects/Conveyance__c/fields/Reason_for_Fall_Through__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Fall_Through__c</fullName>
    <label>Reason for Fall Through</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_for_Fall_Through</valueSetName>
    </valueSet>
</CustomField>