force-app/main/default/objects/Conveyance__c/fields/Request_Fom__c.field-meta.xml
<CustomField>
    <fullName>Request_Fom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Fom</label>
    <referenceTo>Closing_Form__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>