force-app/main/default/objects/Conveyance__c/fields/Round_Robin_Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Conveyance__c</fullName>
    <formula>MOD(VALUE(  Round_Robin_Auto_Number__c),2)+1</formula>
    <label>Round Robin Conveyance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>