force-app/main/default/objects/Conveyance__c/fields/Searches_Applied__c.field-meta.xml
<CustomField>
    <fullName>Searches_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Searches Applied</label>
    <type>Checkbox</type>
</CustomField>