force-app/main/default/objects/Conveyance__c/fields/Searches_Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Searches_Applied_Date__c</fullName>
    <label>Searches Applied Date</label>
    <type>Date</type>
</CustomField>