force-app/main/default/objects/Conveyance__c/fields/Searches_Paid__c.field-meta.xml
<CustomField>
    <fullName>Searches_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Searches Paid</label>
    <type>Checkbox</type>
</CustomField>