force-app/main/default/objects/Conveyance__c/fields/Searches_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Searches_Paid_Date__c</fullName>
    <label>Searches Paid Date</label>
    <type>Date</type>
</CustomField>