force-app/main/default/objects/Conveyance__c/fields/Searches_Received__c.field-meta.xml
<CustomField>
    <fullName>Searches_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Searches Received</label>
    <type>Checkbox</type>
</CustomField>