force-app/main/default/objects/Conveyance__c/fields/Searches_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Searches_Received_Date__c</fullName>
    <label>Searches Received Date</label>
    <type>Date</type>
</CustomField>