force-app/main/default/objects/Conveyance__c/fields/Searches_Requested1__c.field-meta.xml
<CustomField>
    <fullName>Searches_Requested1__c</fullName>
    <inlineHelpText>If you tick &apos;Searches Requested&apos; and keep this blank then It will automatically Update</inlineHelpText>
    <label>Searches Requested</label>
    <type>DateTime</type>
</CustomField>