force-app/main/default/objects/Conveyance__c/fields/Searches_Requested__c.field-meta.xml
<CustomField>
    <fullName>Searches_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Searches Requested</label>
    <type>Checkbox</type>
</CustomField>