force-app/main/default/objects/Conveyance__c/fields/Second_Broker__c.field-meta.xml
<CustomField>
    <fullName>Second_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Broker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>