force-app/main/default/objects/Conveyance__c/fields/Secondary_Buyer_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Buyer_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Buyer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Conveyance</relationshipName>
    <type>Lookup</type>
</CustomField>