force-app/main/default/objects/Conveyance__c/fields/Secondary_Seller_Landlord1__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Seller_Landlord1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Seller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>