force-app/main/default/objects/Conveyance__c/fields/Seller_Agency_Fee__c.field-meta.xml
<CustomField>
    <fullName>Seller_Agency_Fee__c</fullName>
    <inlineHelpText>Stating without Tax</inlineHelpText>
    <label>Seller Agency Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>