force-app/main/default/objects/Conveyance__c/fields/Seller_AML_Count__c.field-meta.xml
<CustomField>
    <fullName>Seller_AML_Count__c</fullName>
    <label>Contract Seller AML Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>