force-app/main/default/objects/Conveyance__c/fields/Seller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Seller_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Conveyances5</relationshipName>
    <type>Lookup</type>
</CustomField>