force-app/main/default/objects/Conveyance__c/fields/Seller_EID__c.field-meta.xml
<CustomField>
    <fullName>Seller_EID__c</fullName>
    <label>Seller EID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>