force-app/main/default/objects/Conveyance__c/fields/Seller_Represented_By__c.field-meta.xml
<CustomField>
    <fullName>Seller_Represented_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller Represented By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conveyances4</relationshipName>
    <type>Lookup</type>
</CustomField>