force-app/main/default/objects/Conveyance__c/fields/Seller_s_Lender__c.field-meta.xml
<CustomField>
    <fullName>Seller_s_Lender__c</fullName>
    <label>Seller&apos;s Lender</label>
    <length>250</length>
    <type>Text</type>
</CustomField>