force-app/main/default/objects/Conveyance__c/fields/Seller_Solicitor__c.field-meta.xml
<CustomField>
    <fullName>Seller_Solicitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Seller or Vendor Solicitor</inlineHelpText>
    <label>Seller Solicitor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.Contact_Sub_Type__c</field>
            <operation>equals</operation>
            <value>Solicitor</value>
        </filterItems>
        <filterItems>
            <field>Contact.ContactType__c</field>
            <operation>equals</operation>
            <value>Solicitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Conveyances7</relationshipName>
    <type>Lookup</type>
</CustomField>