force-app/main/default/objects/Conveyance__c/fields/Selling_office_fee__c.field-meta.xml
<CustomField>
    <fullName>Selling_office_fee__c</fullName>
    <label>Selling office fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>