force-app/main/default/objects/Conveyance__c/fields/Signed_Contract_Received_From_Client1__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_Received_From_Client1__c</fullName>
    <inlineHelpText>If you tick &apos;Signed Contract Received From Client&apos; and keep this blank then It will automatically update</inlineHelpText>
    <label>Signed Contract Received From Client</label>
    <type>DateTime</type>
</CustomField>