force-app/main/default/objects/Conveyance__c/fields/Signed_Contract_Received_From_Client__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_Received_From_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Contract Received From Client</label>
    <type>Checkbox</type>
</CustomField>