force-app/main/default/objects/Conveyance__c/fields/Signed_Mortgage_Received_From_Client1__c.field-meta.xml
<CustomField>
    <fullName>Signed_Mortgage_Received_From_Client1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Mortgage Received From Client</label>
    <type>Checkbox</type>
</CustomField>