force-app/main/default/objects/Conveyance__c/fields/Signed_Mortgage_Received_From_Client__c.field-meta.xml
<CustomField>
    <fullName>Signed_Mortgage_Received_From_Client__c</fullName>
    <inlineHelpText>If you tick &apos;Signed Mortgage Received From Client&apos; and keep this blank then It will automatically update</inlineHelpText>
    <label>Signed Mortgage Received From Client</label>
    <type>DateTime</type>
</CustomField>