force-app/main/default/objects/Conveyance__c/fields/Signed_Status__c.field-meta.xml
<CustomField>
    <fullName>Signed_Status__c</fullName>
    <label>Signed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>