force-app/main/default/objects/Conveyance__c/fields/Source_of_fund_Received__c.field-meta.xml
<CustomField>
    <fullName>Source_of_fund_Received__c</fullName>
    <label>Source of fund Received ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>