force-app/main/default/objects/Conveyance__c/fields/Special_Commercial_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Commercial_Terms__c</fullName>
    <label>Special Commercial Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>