force-app/main/default/objects/Conveyance__c/fields/Special_Conditions_and_remarks__c.field-meta.xml
<CustomField>
    <fullName>Special_Conditions_and_remarks__c</fullName>
    <label>Special Conditions and remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>