force-app/main/default/objects/Conveyance__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <label>Submitted</label>
    <type>Date</type>
</CustomField>