force-app/main/default/objects/Conveyance__c/fields/Survey_On__c.field-meta.xml
<CustomField>
    <fullName>Survey_On__c</fullName>
    <label>Survey On</label>
    <type>Date</type>
</CustomField>