force-app/main/default/objects/Conveyance__c/fields/Surveyor__c.field-meta.xml
<CustomField>
    <fullName>Surveyor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surveyor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Conveyances2</relationshipName>
    <type>Lookup</type>
</CustomField>