force-app/main/default/objects/Conveyance__c/fields/Target_closing_date__c.field-meta.xml
<CustomField>
    <fullName>Target_closing_date__c</fullName>
    <label>Target Closing Date</label>
    <type>Date</type>
</CustomField>