force-app/main/default/objects/Conveyance__c/fields/Tenancy_agreement_or_Ejari__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_agreement_or_Ejari__c</fullName>
    <label>Tenancy agreement or Ejari?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>