force-app/main/default/objects/Conveyance__c/fields/Third_Broker__c.field-meta.xml
<CustomField>
    <fullName>Third_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Broker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>