force-app/main/default/objects/Conveyance__c/fields/Title_Deed_No__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_No__c</fullName>
    <label>Title Deed No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>