force-app/main/default/objects/Conveyance__c/fields/Title_Deed_Received__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Deed Received</label>
    <type>Checkbox</type>
</CustomField>