force-app/main/default/objects/Conveyance__c/fields/Title_Deed_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Received_Date__c</fullName>
    <label>Title Deed Received Date</label>
    <type>Date</type>
</CustomField>