force-app/main/default/objects/Conveyance__c/fields/Transfer_Trustee_Office__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Trustee_Office__c</fullName>
    <label>Transfer Trustee Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Injaz EBP</fullName>
            </value>
            <value>
                <fullName>Dorchester Trustee</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>