force-app/main/default/objects/Conveyance__c/fields/Trustee_Referral_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Referral_Fee_Amount__c</fullName>
    <label>Trustee Referral Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>