force-app/main/default/objects/Conveyance__c/recordTypes/UAE.recordType-meta.xml
<RecordType>
    <fullName>UAE</fullName>
    <active>true</active>
    <label>UAE</label>
</RecordType>