force-app/main/default/objects/Conveyance__c/validationRules/Completion_Date_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Date_Is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c , &quot;Completed&quot;),
  ISBLANK( Completion_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Completion_Date__c</errorDisplayField>
    <errorMessage>If Contract Status is Completed then Completion Date is mandatory</errorMessage>
</ValidationRule>