force-app/main/default/objects/Conveyance__c/validationRules/Contract_Exist_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Exist_Validation</fullName>
    <active>true</active>
    <description>In the UK Record Type, when a record is created, if an offer is made and there is already a contract created for the same offer, then restrict it.</description>
    <errorConditionFormula>AND(ISNEW(),
     Offer__r.Contract_Count__c  &lt;&gt; 0, 
     RecordType.DeveloperName  = &quot;UK&quot;
  )</errorConditionFormula>
    <errorMessage>Contract is already exist - Please check the Contract list on Offer and review the same</errorMessage>
</ValidationRule>